--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/img"
+        android:label="Snoopy Chat"
+        android:roundIcon="@mipmap/img"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChattingApp"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="Snoopy Chat"
             android:theme="@style/Theme.ChattingApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
